src/test/resources/rules/success/ConstantName.java
package rules.success;

public class ConstantName {
    public static final int SCREAMING_SNAKE_CASE = 10;
}