src/test/resources/rules/fail/BadConstantName.java
package rules.fail;

public class BadConstantName {
    public static final int not_screaming_snake_case = 10;
}
